--- a/css/style.css
+++ b/css/style.css
@@ -139,4 +139,70 @@ body {
   .select_cinema {
     min-width: 470px; }
 
+.sheme_body {
+  background: rgba(36, 36, 36, 0.18);
+  border-radius: 10px;
+  margin-bottom: 40px; }
+
+.sheme path:not(.light) {
+  fill: rgba(255, 255, 255, 0.2);
+  cursor: pointer; }
+  .sheme path:not(.light):hover {
+    fill: rgba(255, 255, 255, 0.5); }
+
+.sheme path.booked {
+  fill: rgba(255, 255, 255, 0.05);
+  cursor: not-allowed; }
+  .sheme path.booked:hover {
+    fill: rgba(255, 255, 255, 0.05);
+    cursor: not-allowed; }
+
+.sheme path.active {
+  fill: #fe8e05;
+  cursor: not-allowed; }
+  .sheme path.active:hover {
+    fill: #fe8e05;
+    cursor: not-allowed; }
+
+.legend {
+  display: flex;
+  align-items: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  max-width: 1024px;
+  margin: auto;
+  padding-top: 22px;
+  padding-bottom: 38px; }
+  .legend_label {
+    display: flex;
+    align-items: center;
+    margin-right: 30px;
+    color: rgba(255, 255, 255, 0.5); }
+
+.legend svg {
+  margin-right: 15px; }
+
+.price_body {
+  padding-top: 20px;
+  padding-bottom: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+.price_label {
+  display: block;
+  font-size: 18px;
+  line-height: 21px; }
+.price_tag {
+  font-size: 52px;
+  line-height: 61px; }
+
+.button {
+  background: #fe8e05;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 18px;
+  line-height: 21px;
+  display: block;
+  padding: 24px 52px;
+  text-decoration: none; }
+
 /*# sourceMappingURL=style.css.map */
